--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "PWA - Workshop",
-  "name": "Progressive Web App - Blip Workshop",
+  "name": "PWA - Blip WS",
   "icons": [
     {
       "src": "./icons/blip-icon-16.png",
